--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -7,4 +7,4 @@ file(GLOB all_HEADERS "*.hpp" "*.h")
 
 add_library(drivers ${all_SOURCES})
 target_link_libraries(drivers nlohmann_json spdlog Catch2 qhyccd)
-target_include_directories(drivers PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
+target_include_directories(drivers PUBLIC ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
