Moved server code to server folder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory("${3rd_Party_ROOT}/Catch2-3.6.0")
 
 add_subdirectory(common)
 add_subdirectory(drivers)
+add_subdirectory(server)
 
 add_executable(AlpacaHub ${all_SOURCES})
 
@@ -61,9 +62,9 @@ add_executable(AlpacaHub ${all_SOURCES})
 
 message(STATUS "asio_INCLUDE_DIRS: ${asio_INCLUDE_DIRS}")
 
-target_link_libraries(AlpacaHub PUBLIC restinio qhyccd spdlog nlohmann_json uuid Catch2 drivers common)
+target_link_libraries(AlpacaHub PUBLIC restinio qhyccd spdlog nlohmann_json uuid Catch2 drivers common server)
 
-# add_executable(AlpacaHubTests drivers/zwo_am5_telescope.cpp alpaca_exception.cpp)
+# add_executable(AlpacaHubTests )
 # target_link_libraries(AlpacaHubTests PRIVATE Catch2::Catch2WithMain restinio qhyccd spdlog nlohmann_json uuid)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/html DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
