--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -6,5 +6,5 @@ file(GLOB all_SOURCES "*.cpp" "*.c")
 file(GLOB all_HEADERS "*.hpp" "*.h")
 
 add_library(common STATIC ${all_SOURCES})
-# target_link_libraries(drivers nlohmann_json)
-target_include_directories(common PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_link_libraries(common spdlog)
+target_include_directories(common PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${asio_INCLUDE_DIRS})
