--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -6,5 +6,5 @@ file(GLOB all_SOURCES "*.cpp" "*.c")
 file(GLOB all_HEADERS "*.hpp" "*.h")
 
 add_library(drivers ${all_SOURCES})
-target_link_libraries(drivers nlohmann_json spdlog Catch2 qhyccd)
+target_link_libraries(drivers nlohmann_json spdlog Catch2 qhyccd date::date)
 target_include_directories(drivers PUBLIC ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
