Cleaned up problems with compile_commands.json generation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ project(AlpacaHub CXX)
 include( FetchContent )
 
 set(CMAKE_CXX_STANDARD 17)
-
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(3rd_Party_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/3rd_party")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
