--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -8,5 +8,5 @@ file(GLOB all_SOURCES "*.cpp" "*.c")
 file(GLOB all_HEADERS "*.hpp" "*.h")
 
 add_library(drivers ${all_SOURCES})
-target_link_libraries(drivers nlohmann_json::nlohmann_json spdlog Catch2 qhyccd date::date common interfaces)
+target_link_libraries(drivers nlohmann_json::nlohmann_json spdlog Catch2 qhyccd date::date common)
 target_include_directories(drivers PUBLIC ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
