--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 file(GLOB all_SOURCES "*.cpp" "*.c")
 file(GLOB all_HEADERS "*.hpp" "*.h")
 
-add_library(drivers ${all_SOURCES})
+add_library(drivers STATIC ${all_SOURCES} ${all_HEADERS})
 target_link_libraries(drivers nlohmann_json::nlohmann_json spdlog Catch2 qhyccd date::date common)
 target_include_directories(drivers PUBLIC ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
