--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -8,5 +8,5 @@ file(GLOB all_SOURCES "*.cpp" "*.c")
 file(GLOB all_HEADERS "*.hpp" "*.h")
 
 add_library(common STATIC ${all_SOURCES} ${all_HEADERS})
-target_link_libraries(common spdlog nlohmann_json::nlohmann_json)
+target_link_libraries(common PUBLIC spdlog nlohmann_json::nlohmann_json date::date)
 target_include_directories(common PUBLIC ${CMAKE_CURRENT_LIST_DIR}/.. ${asio_INCLUDE_DIRS})
