--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -135,6 +135,7 @@ add_executable(AlpacaHubTests
   tests/zwo_am5_commands_tests.cpp
   tests/zwo_am5_mount_tests.cpp
   tests/pegasus_alpaca_focuser_tests.cpp
+  tests/qhy_alpaca_filterwheel_standalone_tests.cpp
 )
 
 target_link_libraries(AlpacaHubTests
